# ofipensiones-2

./: .dockerignore  .gitignore  BAREMETAL.md  README.md  pyproject.toml  set_vars.ps1  set_vars.sh
db/pg/: setup_db.sh
docker/deploy/: .pg.env  .web.env  compose.yaml
docker/nginx/: Dockerfile  nginx.conf
docker/pg/: Dockerfile
docker/web/: Dockerfile
ofipensiones/: manage.py
ofipensiones/healthcheck/: urls.py
ofipensiones/ofipensiones/: settings.py  urls.py  wsgi.py
ofipensiones/payments/: admin.py  models.py  serializers.py  urls.py  views.py
test/load/: locustfile.py
